<resources>
    <string name="app_name">BargainAutos</string>
    <string name="applicant_finance">Applicant for Finance</string>
    <string name="assisted_by">Assisted by-</string>
    <string name="web">Web</string>
    <string name="identification">Identification by-</string>
    <string name="south_african_id">South African ID</string>
    <string name="id_number">ID Number</string>
    <string name="id_number_confirm">ID Number (Confirm)</string>
    <string name="do_you_have_a_valid_driver_license">Do you have a valid driver license?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="description_of_vehicle_you_are_looking_for">Description of Vehicle You\'re Looking For</string>
    <string name="instalment_type">Instalment type-</string>
    <string name="no_deposit">No Deposit</string>
    <string name="with_deposit">With Deposit</string>
    <string name="next">Next</string>
    <string name="personal_details">Personal Details</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="sur_name">Surname</string>
    <string name="country_nationality">Country Nationality</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="material_status">Material Status-</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="divorced">Divorced</string>
    <string name="widower">Widower</string>
    <string name="race">Race-</string>
    <string name="asian">Asian</string>
    <string name="coloured">Coloured</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="gender">Gender-</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_mobile_number">Confirm Mobile Number</string>
    <string name="work_number">Work Number</string>
    <string name="confirm_work_number">Confirm Work Number</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="residential_details">Residential Details</string>
    <string name="residential_status">Residential Status-</string>
    <string name="owner_bonded">Owner - Bonded</string>
    <string name="owner_bond_free">Owner - Bond Free</string>
    <string name="lodger">Lodger</string>
    <string name="living_with_parents">Living With Parents</string>
    <string name="tenant">Tenant</string>
    <string name="residential_address">Residential Address (Home Address)</string>
    <string name="address_line">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state_province_region">State / Province / Region</string>
    <string name="postal_code">Zip / Postal Code</string>
    <string name="country">Country</string>
    <string name="period_here">Period Here (Years)</string>
    <string name="period_here2">Period Here (Months)</string>
    <string name="employer_details">Employer Details</string>
    <string name="employer_name">Employer Name (Company Name)</string>
    <string name="occupation">Occupation (Job Title)</string>
    <string name="employer_business_address">Employer Business Address-</string>
    <string name="industry_type">Industry Type-</string>
    <string name="private1">Private</string>
    <string name="mining">Mining</string>
    <string name="self_employed">Self-Employed</string>
    <string name="goverment">Goverment</string>
    <string name="farming">Farming</string>
    <string name="income_expenses"><![CDATA[Income & Expenses]]></string>
    <string name="gross_salary">Gross Salary</string>
    <string name="as_shown_on_payslip">As shown on payslip</string>
    <string name="net_salary">Net Salary</string>
    <string name="frequency_salary">Frequency of Salary-</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="fortnightly">Fortnightly</string>
    <string name="total_monthly_income">Total Monthly Income</string>
    <string name="bond_payment">Bond Payment</string>
    <string name="monthly_rent">Monthly Rent</string>
    <string name="water_electricity"><![CDATA[Water & Electricity]]></string>
    <string name="car_payments">Car Payments</string>
    <string name="personal_loan">Personal Loan</string>
    <string name="credit_card">Credit Card</string>
    <string name="furniture_account">Furniture Accounts</string>
    <string name="clothing_account">Clothing Accounts</string>
    <string name="overdraft_payments">Overdraft Payments</string>
    <string name="policy_insurance">Policy / Insurance</string>
    <string name="telephone_payments">Telephone Payments</string>
    <string name="transport_cost">Transport Costs</string>
    <string name="food_ent"><![CDATA[Food & Entertainment]]></string>
    <string name="education_cost">Education Costs</string>
    <string name="expensive">Maintainance Expenses</string>
    <string name="house_exp">Household Expenses</string>
    <string name="relative_details">Relative Details</string>
    <string name="f_name_next">First Name (Next of Kin)</string>
    <string name="surname_next">Surname (Next of Kin)</string>
    <string name="relation_next">Relation (Next of Kin)</string>
    <string name="phonenum_next">Phone Number (Next of Kin)</string>
    <string name="bank_details">Banking Details (Optional)</string>
    <string name="bank_acount_holder_name">Bank Account Holder Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_branch">Bank Branch</string>
    <string name="account_number">Account Number</string>
    <string name="confirm_acct_number">Confirm Account Number</string>
    <string name="acc_type">Account Type-</string>
    <string name="cheque">Cheque</string>
    <string name="savings">Savings</string>
    <string name="transmission">Transmission</string>
    <string name="how_did_you_here">How did you hear of us? (Optional)</string>
    <string name="newpaper">Newspaper Ad</string>
    <string name="social_media">Social Media</string>
    <string name="online_ads">Online Ads</string>
    <string name="friends">Friends</string>
    <string name="other">Other</string>
    <string name="credit_provider">Credit Provider Consent-</string>
    <string name="submit">Submit</string>
    <string name="driver_license">Driver license</string>
    <string name="documents">Picture of ID Document</string>
    <string name="month_payslip">3 Months latest payslip</string>
    <string name="upload_id_document">Upload Picture of ID Document</string>
    <string name="upload_3_month_payslip">Upload Picture 3 months latest payslips</string>
    <string name="upload_license">Upload Picture of Driver license</string>
    <string name="text_not1"><br></br>Thank you for submitting your <br>application!</br>
        <br></br><br>I will be in contact with you shortly,</br> <br>should you qualify for finance.</br>
    </string>
    <string name="text_not2">Kind regards, Bargain Autos Team</string>
</resources>