<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/personal_details"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/edFname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/rounded_bg_gray_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp" />


                <EditText
                    android:id="@+id/edMname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_bg_gray_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/middle_name"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:inputType="text"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp" />


                <EditText
                    android:id="@+id/edSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_bg_gray_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/sur_name"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp" />


                <EditText
                    android:id="@+id/edNationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_bg_gray_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/country_nationality"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/edLang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_bg_gray_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/preferred_language"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp" />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdNoDeposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/male"
                        android:textSize="@dimen/_11sdp" />


                    <RadioButton
                        android:id="@+id/rdWithDeposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/female"
                        android:textSize="@dimen/_11sdp" />


                </RadioGroup>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/race"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdAsian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/asian"
                        android:textSize="@dimen/_11sdp" />


                    <RadioButton
                        android:id="@+id/rdColoured"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/coloured"
                        android:textSize="@dimen/_11sdp" />

                    <RadioButton
                        android:id="@+id/rdBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/black"
                        android:textSize="@dimen/_11sdp" />

                    <RadioButton
                        android:id="@+id/rdWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/white"
                        android:textSize="@dimen/_11sdp" />

                </RadioGroup>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/material_status"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdSingle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/single"
                        android:textSize="@dimen/_11sdp" />


                    <RadioButton
                        android:id="@+id/rdMarried"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/married"
                        android:textSize="@dimen/_11sdp" />


                    <RadioButton
                        android:id="@+id/rdDivorced"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/divorced"
                        android:textSize="@dimen/_11sdp" />


                    <RadioButton
                        android:id="@+id/rdWidower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/widower"
                        android:textSize="@dimen/_11sdp" />


                </RadioGroup>






                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_5sdp">

                    <RelativeLayout
                        android:id="@+id/rlNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_blue">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/poppins_regular"
                            android:padding="@dimen/_12sdp"
                            android:text="@string/next"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />


                    </RelativeLayout>


                </androidx.cardview.widget.CardView>




            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</layout>