<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/applicant_finance"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/assisted_by"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                    <RadioButton
                        android:id="@+id/rdWeb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/web"
                        android:textSize="@dimen/_11sdp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/identification"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                    <RadioButton
                        android:id="@+id/rdIdentification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/south_african_id"
                        android:textSize="@dimen/_11sdp" />


                </RadioGroup>


                <EditText
                    android:id="@+id/edId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/rounded_bg_gray_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/id_number"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/edIdConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_bg_gray_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/id_number_confirm"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/do_you_have_a_valid_driver_license"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/yes"
                        android:textSize="@dimen/_11sdp" />


                    <RadioButton
                        android:id="@+id/rdNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/no"
                        android:textSize="@dimen/_11sdp" />


                </RadioGroup>


                <EditText
                    android:id="@+id/edDes"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/rounded_bg_gray_white"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical|top"
                    android:hint="@string/description_of_vehicle_you_are_looking_for"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="5"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="false" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/instalment_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdNoDeposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/no_deposit"
                        android:textSize="@dimen/_11sdp" />


                    <RadioButton
                        android:id="@+id/rdWithDeposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/with_deposit"
                        android:textSize="@dimen/_11sdp" />


                </RadioGroup>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_5sdp">

                    <RelativeLayout
                        android:id="@+id/rlNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_blue">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/poppins_regular"
                            android:padding="@dimen/_12sdp"
                            android:text="@string/next"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />


                    </RelativeLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </RelativeLayout>

    </ScrollView>
</layout>