<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/how_did_you_here"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rd1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/newpaper"
                        android:textSize="@dimen/_11sdp" />


                    <RadioButton
                        android:id="@+id/rd2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/social_media"
                        android:textSize="@dimen/_11sdp" />

                    <RadioButton
                        android:id="@+id/rd3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/online_ads"
                        android:textSize="@dimen/_11sdp" />


                    <RadioButton
                        android:id="@+id/rd4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/friends"
                        android:textSize="@dimen/_11sdp" />

                    <RadioButton
                        android:id="@+id/rd5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/other"
                        android:textSize="@dimen/_11sdp" />


                </RadioGroup>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_5sdp">

                    <RelativeLayout
                        android:id="@+id/rlNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_blue">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/poppins_regular"
                            android:padding="@dimen/_12sdp"
                            android:text="@string/next"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />


                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</layout>